--- a/NotePad/MainWindow.xaml
+++ b/NotePad/MainWindow.xaml
@@ -5,14 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NotePad"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Notepad" Height="350" Width="525">
     <Grid>
-        <Menu VerticalAlignment="Top">
-            <MenuItem Header="File">
-                <MenuItem Header="Open"/>
-                <MenuItem Header="Save"/>
-                <MenuItem Header="Test add new item"/>
-            </MenuItem>
-        </Menu>
     </Grid>
 </Window>
