--- a/NotePad/MainWindow.xaml
+++ b/NotePad/MainWindow.xaml
@@ -4,8 +4,44 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NotePad"
+        xmlns:viewmodels ="clr-namespace:NotePad.ViewModels"
         mc:Ignorable="d"
         Title="Notepad" Height="400" Width="525">
-    <Grid>
-    </Grid>
+    <Window.DataContext>
+        <viewmodels:MainViewModel/>
+    </Window.DataContext>
+    <DockPanel>
+        <Menu DockPanel.Dock="Top">
+            <Menu.Items>
+                <MenuItem Header="File" DataContext="{Binding File}">
+                    <MenuItem Header="New" Command="{Binding NewCommand}"/>
+                    <MenuItem Header="Open" Command="{Binding OpenCommand}"/>
+                    <MenuItem Header="Save" Command="{Binding SaveCommand}"/>
+                    <MenuItem Header="Save as.." Command="{Binding SaveAsCommand}"/>
+                </MenuItem>
+                <MenuItem Header="Format" DataContext="{Binding Editor}">
+                    <MenuItem Header="Format" Command="{Binding FormatCommand}"/>
+                    <MenuItem Header="Word Wrpa" Command="{Binding WrapCommand}"/>
+                </MenuItem>
+                <MenuItem Header="Help" DataContext="{Binding Help}">
+                    <MenuItem Header="About" Command="{Binding HelpCommand}"/>
+                </MenuItem>
+            </Menu.Items>
+        </Menu>
+        <DockPanel>
+            <TextBlock DockPanel.Dock="Bottom"
+                       DataContext="{Binding File.Document}"
+                       Text="{Binding FilePath}"/>
+            <TextBox DockPanel.Dock="Top"
+                     VerticalScrollBarVisibility="Visible"
+                     DataContext="{Binding Editer}"
+                     FontFamily="{Binding Format.Family}"
+                     FontSize="{Binding Format.Size}"
+                     FontWeight="{Binding Format.Weight}"
+                     TextWrapping="{Binding Format.Wrap}"
+                     AcceptsReturn="True"
+                     AcceptsTab="True"
+                     Text="{Binding Document.Text, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        </DockPanel>
+    </DockPanel>
 </Window>
